2008-06-01  Peter Bloomfield

	* src/main-window.c: tighten code.
	* src/message-window.c: (mw_header_activate): do not change
	balsa-app.shown_headers.
	(show_all_headers_tool_cb): tighten code.

2008-06-02  Pawel Salek

	* libbalsa/imap/imap-handle.c: be more robust to servers returning
	resposes in a changed order. Handle GMail's wrong BODYSTRUCTURE
	response.
	* libbalsa/imap/imap_private.h: define ImapFetchBodyType to detect
	changed response order.
	* libbalsa/imap/imap-commands.c: detect changed response order.

2008-06-01  Peter Bloomfield

	* src/balsa-message.h: remove unused member show_all_headers.
	* src/balsa-message.c: (balsa_message_init): do not init it.
	* src/balsa-mime-widget-message.c: (add_header_gchar,
	add_header_address_list,
	balsa_mime_widget_message_set_headers_d): do not test it.

2008-06-01  Peter Bloomfield

	Make the new mail tray icon optional.

	* src/balsa-app.h: new member notify_new_mail_icon.
	* src/balsa-app.c: (balsa_app_init): initialize it to 1.
	* src/main-window.c: test it.
	* src/pref-manager.c: (open_preferences_manager, apply_prefs,
	set_prefs, checking_group): manage it.
	* src/save-restore.c: (config_global_load, config_save): load
	and save it.

2008-06-01  Peter Bloomfield

	* src/main-window.c: reassign icons to get "Expunge" as a
	toolbar option.
	* src/toolbar-factory.c: change labels accordingly.

2008-06-01  Pawel Salek

	* src/balsa-mime-widget-message.c: truncate long headers when
	"view selected" is chosen.

2008-05-31  Pawel Salek

	* configure.in, NEWS: release 2.3.24

2008-05-25  Albrecht Dreß

	Offer the option of sending a new message with both text/plain
	and text/html versions, specifically to avoid right-to-left text
	being mangled by text-to-html converters. The option is
	per-identity.

	* libbalsa/body.h: new member for html version.
	* libbalsa/body.c: (libbalsa_message_body_new,
	libbalsa_message_body_free): manage it.
	* libbalsa/identity.h: new member for option.